<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A2647"
    tools:context=".View.details.CapsuleDetailFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="286dp"
        android:layout_height="179dp"
        android:layout_marginTop="57dp"
        android:src="@drawable/spacexlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prop"
        android:layout_width="287dp"
        android:layout_height="138dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="62dp"
        android:gravity="left"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/prop1"
        android:layout_width="286dp"
        android:layout_height="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="61dp"
        android:gravity="left"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prop" />

    <TextView
        android:id="@+id/prop2"
        android:layout_width="285dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="64dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="63dp"
        android:gravity="left"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prop1" />

    <TextView
        android:id="@+id/name"
        android:layout_width="277dp"
        android:layout_height="32dp"
        android:layout_marginTop="54dp"
        android:gravity="center"
        android:text="TextView"
        android:textAllCaps="true"
        android:textColor="#B8A606"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>