<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A2647"
    tools:context=".View.details.ShipDetailFragment"
    android:id="@+id/shipConstraint">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="285dp"
        android:layout_height="129dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="90dp"
        android:src="@drawable/spacexlogo"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="34dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#B8A606"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/prop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/prop1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="62dp"

        android:layout_marginEnd="62dp"
        android:layout_marginBottom="72dp"
        android:gravity="left"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prop" />

    <TextView
        android:id="@+id/prop"
        android:layout_width="277dp"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:gravity="left"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/prop1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

</androidx.constraintlayout.widget.ConstraintLayout>